--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 /* content */
 
 .content {
-    height: 40rem;
+    height: 48rem;
     max-width: 66rem;
     display: flex;
     flex-direction: column;
@@ -58,13 +58,24 @@ body {
 }
 
 .content h2 {
-    font-size: 2.6rem;
+    font-size: clamp(2rem, 4vw, 3rem);
     color: white;
     padding: .5rem;
 }
 
 .content h2 span {
     color: red;
+}
+
+.content .alura {
+    color: white;
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.content .alura a {
+    color: #138dc5;
+    font-weight: bold;
 }
 
 .content p {
@@ -113,7 +124,7 @@ button {
 
 .inputValueAndButtonToCheck .reactionToResponse {
     color: red;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     font-weight: 700;
     letter-spacing: .2rem;
     background-color: #f0f8ff65;
@@ -196,7 +207,7 @@ footer p span {
 }
 
 .numberAttempts {
-    color: rgb(255, 255, 255);
+    color: #ffffff;
     text-decoration: underline;
-    font-size: 2.6rem;
+    font-size: 2.2rem;
 }
