--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 html {
     font-family: 'Roboto', sans-serif;
     font-size: 62.5%;
+    height: 100vh;
 }
 
 body {
@@ -32,24 +33,20 @@ body {
 
 .bgOpacity {
     background-color: rgba(0, 0, 0, 0.363);
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
 }
 
 
 /* content */
 
 .content {
-    /* height: 48rem;
-    max-width: 66rem; */
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
     align-items: center;
-    /* z-index: 1; */
-    position: absolute;
-    text-align: center;
+    height: 100vh;
 }
 
 .content h1 {
