--- a/style.css
+++ b/style.css
@@ -268,6 +268,7 @@ footer .links li:hover img {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .modal_Result.activeModal {
@@ -283,6 +284,8 @@ footer .links li:hover img {
     width: 30rem;
     height: 33rem;
     background-image: linear-gradient(50deg, rgb(47, 13, 236) 0%, rgb(52, 31, 245) 0.01%, rgb(118, 27, 236) 99.99%, rgba(180, 213, 219, 0) 100%);
+    position: absolute;
+    width: 100%;
 }
 
 .modal_Result .mensagem {
